fix jumbotron padding on smallest screens

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,12 @@ a:hover {
     }
 }
 
+@media screen and (max-width: 400px) {
+    .jumbotron {
+        padding: 30px 0;
+    }
+}
+
 h1{
 	font-size:37px;
 	color:#3b3b3b;	
